--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,7 +42,7 @@ story_location: /home/igor/rails_app/cronos-poc/_bmad-output/implementation-arti
 development_status:
   # Epic 1: Infraestrutura e Autenticação
   epic-1: in-progress
-  1-1-inicializar-projeto-rails-com-starter-template: ready-for-dev
+  1-1-inicializar-projeto-rails-com-starter-template: review
   1-2-configurar-docker-e-docker-compose: backlog
   1-3-configurar-rspec-e-factories: backlog
   1-4-configurar-code-quality-tools: backlog
